tests/ui/frontmatter/unclosed-3.stderr
error: invalid preceding whitespace for frontmatter close
  --> $DIR/unclosed-3.rs:12:1
   |
LL |     ---x
   | ^^^^^^^^
   |
note: frontmatter close should not be preceded by whitespace
  --> $DIR/unclosed-3.rs:12:1
   |
LL |     ---x
   | ^^^^

error: frontmatter close does not match the opening
  --> $DIR/unclosed-3.rs:1:1
   |
LL |   ----cargo
   |   ^---
   |   |
   |  _the opening here has 4 dashes...
   | |
...  |
LL | | fn foo(x: i32) -> i32 {
LL | |     ---x
   | |_---____^
   |   |
   |   ...while the close has 3 dashes

error: extra characters after frontmatter close are not allowed
  --> $DIR/unclosed-3.rs:12:1
   |
LL |     ---x
   | ^^^^^^^^

error: unexpected closing delimiter: `}`
  --> $DIR/unclosed-3.rs:15:1
   |
LL | }
   | ^ unexpected closing delimiter

error: aborting due to 4 previous errors

